# lex-eval

./: Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: story-template.md
src/lex_eval/connectors/: lex_llm_connector.py
src/lex_eval/metrics/: metrics.py
src/tests/: compare_workflows.py  test_connector.py  test_metrics.py
