[project]
name = "lex-eval"
version = "0.1.0"
description = "Evaluation framework for lex-llm workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "pytest-asyncio>=1.0.0", "ruff>=0.11.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/lex_eval"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["src"]
